--- a/style.css
+++ b/style.css
@@ -5,3 +5,57 @@
 html {
   font-size: 10px;
 }
+
+body {
+  margin: 0 ;
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(#333, #111);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.grid {
+  
+  background-color: rgb(161, 162, 163);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  border: 3px solid #8a0000;
+  height: 300px;
+}
+
+.grid-items {
+  border: .1rem solid #da040444;
+  font-size: 2rem;
+  position: relative
+  }
+
+  #box3, #box7, #box10, #box11, #box12, #box15 {
+    border-left: .5rem solid #111;
+}
+
+#box1, #box2, #box3, #box4, #box5, #box8, #box9, #box10, #box11 {
+  border-bottom: .5rem solid #111;
+}
+
+.prompt {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.answer {
+  width: 50%;
+  height: 50%;
+  text-align: center;
+}
+
+.special {
+  border: none;
+  font-size: 2rem;
+}
+
+@media screen and (min-width: 475px) {
+   html {font-size: 16px;}
+  }
